# swiss-german-voice

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feedback.md
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  COMPOUND_FLOW_PHASE_BC.md  DECISIONS.md  ROADMAP.md  TELEGRAM_RUNBOOK.md
docs/brainstorms/: 2026-03-15-pre-release-v1-brainstorm.md
docs/plans/: 2026-03-15-001-pre-release-improvements-plan.md
docs/reviews/: 2026-03-15-pre-release-improvements-review.md
scripts/: README.md  run_telegram_dev.sh
skill/swiss-german-voice/: SKILL.md
skill/swiss-german-voice/references/: adapter-interface.md  phases.md
src/swiss_german_voice/: __init__.py  factory.py
src/swiss_german_voice/adapters/openclaw/: __init__.py  adapter.py
src/swiss_german_voice/adapters/telegram/: __init__.py  api.py  handler.py  normalize.py  polling.py
src/swiss_german_voice/core/: __init__.py  correction.py  envelopes.py  lexicon.py  normalize.py  persistence.py  service.py  transcription.py
src/swiss_german_voice/data/: lexicon_corrections.json
tests/adapters/: test_openclaw_adapter.py  test_telegram_adapter.py
tests/core/: test_correction.py  test_factory.py  test_normalize.py  test_persistence.py
