[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swiss-german-voice"
version = "0.0.1-rc1"
description = "OpenClaw skill for transcribing and interpreting Swiss German voice memos"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "faster-whisper>=1.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
swiss_german_voice = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
